<resources>
    <string name="app_name">Movies</string>
    <string name="seeflix">SeeFlix</string>
    <string name="movie_releases_year">Release:</string>
    <string name="movie_detail_overview">Overview</string>
    <string name="most_popular_movies">Popular Movies</string>
    <string name="most_rated_movies">Rated Movies</string>
    <string name="upcoming_movies">Upcoming Movies</string>
    <string name="credits_name_detail">Name</string>
    <string name="character_credits_detail">Character</string>
    <string name="movie_cast_detail">Cast:</string>
    <string name="next_page_popular_movies_button">next</string>
    <string name="prev_button_popular_movies">prev</string>
    <string name="movie_videos_detail">Trailers:</string>
    <string name="home_nav_menu">Home</string>
    <string name="search_nav_menu">Search</string>
    <string name="favorites_nav_menu">Favorites</string>
    <string name="profile_nav_menu">Profile</string>
    <string name="login_user_button">Login</string>
    <string name="login_user_email">Email</string>
    <string name="login_user_password">Password</string>
    <string name="login_user_forgot_password">forgotten password?</string>
    <string name="login_user_create_account">Don´t have a account? SignUp</string>
    <string name="login_user_signup">Signup</string>
    <string name="login_user_signup_have_account">Have a account? Login</string>
    <string name="add_to_favorite_movie">Like</string>
    <string name="is_liked">isLiked</string>
    <string name="remove_movie_favorite">Remove from favorites</string>
    <string name="add_favorite_movie">Add to favorites</string>
</resources>