<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.movieDetail.MovieDetailActivity"
    android:background="@drawable/black_gradient">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_backdrop"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:cropToPadding="true"
                android:scaleType="centerCrop"
                tools:srcCompat="@tools:sample/avatars"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/movie_details_reactions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/movie_votes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:textColor="@color/gray"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Movie Votes" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:id="@+id/movie_release_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/movie_releases_year"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/gray"
                    android:textStyle="bold"
                    tools:text="Movie Year:" />

                <TextView
                    android:id="@+id/movie_release"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="12dp"
                    android:gravity="end"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="@color/gray"
                    tools:text="Movie Year" />

            </RelativeLayout>

            <TextView
                android:id="@+id/movie_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="4dp"
                android:text="@string/movie_detail_overview"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="18sp"
                android:textColor="@color/gray"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/movie_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="2dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="16sp"
                android:textColor="@color/gray"
                tools:text="Movie Description" />

            <TextView
                android:id="@+id/movie_cast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_word"
                android:layout_marginTop="2dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:text="@string/movie_cast_detail"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="18sp"
                android:textColor="@color/gray"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/cast_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/cast_list"
                    android:layout_width="wrap_content"
                    android:layout_height="260dp"
                    android:orientation="horizontal"
                    tools:listitem="@layout/credits_item" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/videos_container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/movie_videos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:justificationMode="inter_word"
                    android:text="@string/movie_videos_detail"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="8dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="18sp"
                    android:textColor="@color/gray"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/video_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:scrollbars="horizontal"
                    tools:listitem="@layout/videos_item" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>