<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/black_gradient"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/login_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_popcorn" />

    <TextView
        android:id="@+id/textView2"
        style="@style/Widget.MaterialComponents.Snackbar.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="Movie Lovers"
        android:textColor="@color/white"
        android:textSize="24dp"
        app:fontFamily="serif-monospace"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_image" />

    <EditText
        android:id="@+id/textInputEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/input_text_style"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/login_image"
        app:layout_constraintStart_toStartOf="@+id/login_image"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/textInputPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/input_text_style"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="Password"
        android:inputType="textPassword"
        android:padding="16dp"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/textInputEmail"
        app:layout_constraintStart_toStartOf="@+id/textInputEmail"
        app:layout_constraintTop_toBottomOf="@+id/textInputEmail" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:elevation="4dp"
        android:text="@string/login_user_button"
        android:background="@drawable/round_button"
        android:textColor="@color/red_material_color"
        app:layout_constraintEnd_toEndOf="@+id/textInputPassword"
        app:layout_constraintStart_toStartOf="@+id/textInputPassword"
        app:layout_constraintTop_toBottomOf="@+id/textInputPassword" />

    <TextView
        android:id="@+id/txt_forgotten_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/login_user_forgot_password"
        android:textColor="@color/red_material_color"
        app:fontFamily="sans-serif-medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/gray_gradient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_forgotten_password" />

    <TextView
        android:id="@+id/txt_sign_up_option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/login_user_create_account"
        android:textColor="@color/white"
        app:fontFamily="sans-serif-medium"
        app:layout_constraintEnd_toEndOf="@+id/separator"
        app:layout_constraintStart_toStartOf="@+id/separator"
        app:layout_constraintTop_toBottomOf="@+id/separator" />


</androidx.constraintlayout.widget.ConstraintLayout>