<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">


                <ImageView
                    android:id="@+id/img_most_popular_movies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_splash_screen" />

                <TextView
                    android:id="@+id/txt_most_popular_movies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/most_popular_movies"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/design_default_color_on_secondary"
                    app:layout_constraintBottom_toBottomOf="@+id/img_most_popular_movies"
                    app:layout_constraintStart_toEndOf="@+id/img_most_popular_movies"
                    app:layout_constraintTop_toTopOf="@+id/img_most_popular_movies" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/design_default_color_secondary" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">


                <ImageView
                    android:id="@+id/img_most_rated_movies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_splash_screen" />

                <TextView
                    android:id="@+id/txt_most_rated_movies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/most_rated_movies"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/design_default_color_on_secondary"
                    app:layout_constraintBottom_toBottomOf="@+id/img_most_rated_movies"
                    app:layout_constraintStart_toEndOf="@+id/img_most_rated_movies"
                    app:layout_constraintTop_toTopOf="@+id/img_most_rated_movies" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/design_default_color_secondary" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">


                <ImageView
                    android:id="@+id/img_upcoming_movies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_splash_screen" />

                <TextView
                    android:id="@+id/txt_upcoming_movies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/upcoming_movies"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textColor="@color/design_default_color_on_secondary"
                    app:layout_constraintBottom_toBottomOf="@+id/img_upcoming_movies"
                    app:layout_constraintStart_toEndOf="@+id/img_upcoming_movies"
                    app:layout_constraintTop_toTopOf="@+id/img_upcoming_movies" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/design_default_color_secondary" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>